<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_profile"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/box"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/profile" />

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile"
            tools:src="@drawable/user1" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user_avatar"
            tools:text="fanggadewangga" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            tools:text="fangga" />

        <ImageView
            android:id="@+id/iv_vertical_line"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/line"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_follower_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_vertical_line"
            tools:text="24" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/follower"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follower_value" />

        <TextView
            android:id="@+id/tv_following_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follower"
            tools:text="32" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/following"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_following_value" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/grey_rounded_background"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_following">

            <ImageView
                android:id="@+id/iv_company"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/company"
                android:src="@drawable/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/Detail"
                android:text="@string/company"
                app:layout_constraintBottom_toBottomOf="@id/iv_company"
                app:layout_constraintStart_toEndOf="@id/iv_company"
                app:layout_constraintTop_toTopOf="@id/iv_company" />

            <TextView
                android:id="@+id/tv_company_value"
                style="@style/Value"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintStart_toStartOf="@id/tv_company"
                app:layout_constraintTop_toBottomOf="@id/tv_company"
                tools:text="@string/university_of_brawijaya" />


            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/location"
                android:src="@drawable/location"
                app:layout_constraintStart_toStartOf="@id/iv_company"
                app:layout_constraintTop_toBottomOf="@id/tv_company_value" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/Detail"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@id/iv_location"
                app:layout_constraintStart_toEndOf="@id/iv_location"
                app:layout_constraintTop_toTopOf="@id/iv_location" />

            <TextView
                android:id="@+id/tv_location_value"
                style="@style/Value"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/tv_location"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                tools:text="@string/lamongan_indonesia" />

            <ImageView
                android:id="@+id/iv_repository"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/repository"
                android:src="@drawable/folder"
                app:layout_constraintStart_toStartOf="@id/iv_location"
                app:layout_constraintTop_toBottomOf="@id/tv_location_value" />

            <TextView
                android:id="@+id/tv_repository"
                style="@style/Detail"
                android:text="@string/repository"
                app:layout_constraintBottom_toBottomOf="@id/iv_repository"
                app:layout_constraintStart_toEndOf="@id/iv_repository"
                app:layout_constraintTop_toTopOf="@id/iv_repository" />

            <TextView
                android:id="@+id/tv_repository_value"
                style="@style/Value"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/tv_repository"
                app:layout_constraintTop_toBottomOf="@id/tv_repository"
                tools:text="@string/_32" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>